fix: alt text overflow when avatar src is absent

--- a/common/static/scss/_common.scss
+++ b/common/static/scss/_common.scss
@@ -194,6 +194,8 @@ form img {
 
 .avatar {
   display: inline-block;
+  overflow: hidden;
+  max-width: 3em;
 
   img {
     max-width: unset;
